# stable-asset

lib/stable-asset/: Cargo.toml
lib/stable-asset/src/: lib.rs
